created the basic layout

--- a/MEAN/TharnVision/server/includes/layout.jade
+++ b/MEAN/TharnVision/server/includes/layout.jade
@@ -1,6 +1,7 @@
 doctype 5
 html
    head
+      title TharnVision
       link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
       link(rel="stylesheet", href="/css/bootstrap.css")
       link(rel="stylesheet", href="/vendor/toastr/toastr.css")
