done adding content to main page

--- a/MEAN/TharnVision/server/views/partials/main.jade
+++ b/MEAN/TharnVision/server/views/partials/main.jade
@@ -1,2 +1,10 @@
-h1 This is a partial
-h2 {{  myVar }}
+.container
+  .jumbotron
+    h1 TharnVision
+    p Dor vratix ti haruun bane. Brak haruun mothma anzati farlax ubese neti ree-yees kamino. Oppo sunrider jerjerrod owen stereb. Bespin b4-d4 klivian bertroff quermian veila ima-gun k-3po. Bail talz doldur kaminoan.
+
+   .row
+    .col-md-6
+      div(ng-include="'/partials/featured-courses'")
+    .col-md-6
+      div(ng-include="'/partials/new-courses'")
